fixed player 2 attack button alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -181,7 +181,7 @@ img {
 	color: red;
 }
 #p2attack {
-	margin-left: 169px;
+	margin-left: 167px;
 }
 
 /*Gerry*/
